--- a/server/dealership/docker-compose.yml
+++ b/server/dealership/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.9'
+version: "3.9"
 
 services:
   # Mongodb service
@@ -13,10 +13,11 @@ services:
 
   # Node api service
   api:
+    build: .
     image: nodeapp
     ports:
       - 3030:3030
-    depends_on: 
+    depends_on:
       - mongo_db
 
 volumes:
