--- a/server/dealership/package.json
+++ b/server/dealership/package.json
@@ -2,16 +2,23 @@
   "name": "database",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "type": "module",
+  "module": "es2022",
+  "main": "app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",    
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.1"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3"
   }
 }
