--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,4 @@
-backend_url =your backend url
-sentiment_analyzer_url=your code engine deployment url
+backend_url=localhost:3030
+sentiment_analyzer_url=https://sentianalyzer.21ktol8t78r3.us-south.codeengine.appdomain.cloud/
+
+# backend_url=https://marxserua-3030.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai/
