--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,4 +1,2 @@
-# backend_url=https://marxserua-3030.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai/
-sentiment_analyzer_url=https://sentianalyzer.21ktol8t78r3.us-south.codeengine.appdomain.cloud/
-
-backend_url=http://localhost:3030
+backend_url=https://marxserua-3030.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai/
+sentiment_analyzer_url=https://sentianalyzer.21nkwzxmvua7.us-south.codeengine.appdomain.cloud/
